--- a/admin/view/style.css
+++ b/admin/view/style.css
@@ -3,18 +3,41 @@
   margin: 0;
 }
 :root{
-  --light-mode-primary-color:#9191ff;
-  --light-mode-secondary-color:red;
-  --light-mode-accent-color:#6d6dffc6;
+  --light-mode-primary-color:#3a7cff;
+  --light-mode-secondary-color:rgb(134, 163, 221);
+  --light-mode-accent-color:#2d9e80c6;
+  --light-mode-neutral-color:#989898c6;
   --dark-mode-primary-color:red;
   --dark-mode-secondary-color:red;
   --dark-mode-accent-color:red;
 }
+
 .gridcenter{
   height: 100vh;
   display: grid;
   align-items: center;
   justify-content: center;
+}
+.flexcenter{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  min-width: fit-content;
+  width: 300px;
+  min-height: 350px;
+  height: fit-content;
+  padding: 40px;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  border-radius: 50px;
+  background-color: var(--light-mode-neutral-color);
+  box-shadow: 5px 5px 10px var(--light-mode-primary-color)
+  ;
 }
 
 /* field with icon widget */
@@ -28,7 +51,7 @@
   outline: 0;
   background-size: 30px !important;
   background-position: 5px !important; 
-  background-color: var(--light-mode-primary-color) !important;
+  background-color: var(--light-mode-neutral-color);
 }
 .input-with-placeholder label {
   position: absolute;
@@ -44,7 +67,7 @@
 .input-with-placeholder input {
   outline: 0;
   border: 0;
-  width: inherit;
+  width: 100%;
   height: 40px;
   padding: 0 15px;
   background: transparent;
@@ -60,31 +83,16 @@
 .input-with-placeholder input::placeholder{
   color: transparent;
 }
-.form{
-  display: flex;
-  flex-direction: column;
-  min-width: fit-content;
-  width: 300px;
-  min-height: 350px;
-  height: fit-content;
-  padding: 40px;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-  background-color: var(--light-mode-primary-color);
-  border-radius: 50px;
-}
 .button{
-  width: 70px;
+  width: 80px;
   aspect-ratio: 2/1;
-  background-color: var(--light-mode-primary-color);
+  background-color: var(--light-mode-neutral-color);
   border: 2px solid black;
-  border-radius: 50px;
-  align-self: flex-end;
-  margin-right: 30px;
+  border-radius: 15px;
+  align-self:safe;
 }
 .button:hover{
-  background-color: var(--light-mode-accent-color );
+  background-color: var(--light-mode-secondary-color );
 }
 
 
@@ -168,6 +176,7 @@
   height: 50px;
   background:blue;
   display: flex;
+  overflow: hidden;
 }
 .profile:hover{
 background:rgb(225, 187, 187);
@@ -232,5 +241,124 @@ position: relative;
   position: relative;
   margin-left: auto;
 }
-.received{
+.icon{
+  position: right !important;
+}
+input[type="file"] {
+  display: none;
+}
+
+.custom-file-upload {
+  border: 3px solid var(--light-mode-primary-color);
+  height:100px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  /* display: inline-block; */
+  padding: 12px;
+  cursor: pointer;
+}
+.custom-file-upload img{
+  height: 100% ;
+  aspect-ratio: 1/1;
+}
+
+
+
+
+
+/* next*/
+:root {
+  --line-border-fill: #3498db;
+  --line-border-empty: #e0e0e0;
+}
+
+body {
+  font-family: 'Muli', sans-serif;
+  overflow: hidden;
+  margin: 0;
+}
+
+.contain {
+  grid-area: container;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.progress-container {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-bottom: 30px;
+  max-width: 100%;
+  width: 350px;
+}
+
+.progress-container::before {
+  content: '';
+  background-color: #e0e0e0;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  height: 4px;
+  width: 100%;
+  z-index: -1;
+}
+
+.progress {
+  background-color: var(--line-border-fill);
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  height: 4px;
+  width: 0;
+  z-index: -1;
+  transition: .4s ease;
+}
+
+.circle {
+  background-color: #fff;
+  color: #999;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid var(--line-border-empty);
+  transition: .4s ease;
+}
+
+.circle.active {
+  border-color: var(--line-border-fill);
+}
+.buttons{
+  display: flex;
+  justify-content: space-around;
+}
+.btn {
+  background-color: var(--line-border-fill);
+  color: #fff;
+  border: 0;
+  border-radius: 6px;
+  cursor: pointer;
+  font-family: inherit;
+  padding: 8px 30px;
+  margin: 5px;
+  font-size: 14px;
+}
+
+.btn:active {
+  transform: scale(.98);
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.btn:disabled {
+  background-color: var(--line-border-empty);
 }
