--- a/admin/view/style.css
+++ b/admin/view/style.css
@@ -258,6 +258,7 @@ position:relative;
   width: 50px;
   background: rgb(255, 255, 255);
   border-radius: 50%;
+  flex-shrink: 0;
 }
 .profile span{
 position: relative;
